chore: update remaining libs + lock

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ticket-thunes",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,21 +11,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.4",
-    "@angular/cdk": "^12.2.6",
+    "@angular/cdk": "~13.3.4",
     "@angular/common": "~13.3.4",
     "@angular/compiler": "~13.3.4",
     "@angular/core": "~13.3.4",
-    "@angular/flex-layout": "^12.0.0-beta.35",
+    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "~13.3.4",
-    "@angular/material": "^12.2.6",
+    "@angular/material": "~13.3.4",
     "@angular/platform-browser": "~13.3.4",
     "@angular/platform-browser-dynamic": "~13.3.4",
     "@angular/router": "~13.3.4",
     "@angular/service-worker": "~13.3.4",
-    "@ngrx/effects": "^12.4.0",
-    "@ngrx/entity": "^12.4.0",
-    "@ngrx/store": "^12.4.0",
-    "@ngrx/store-devtools": "^12.4.0",
+    "@ngrx/effects": "~13.1.0",
+    "@ngrx/entity": "~13.1.0",
+    "@ngrx/store": "~13.1.0",
+    "@ngrx/store-devtools": "~13.1.0",
     "color2k": "^1.2.4",
     "html2canvas": "^1.4.0",
     "pdfjs": "^2.4.6",
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.3",
-    "@angular/cli": "~12.2.6",
+    "@angular/cli": "~13.3.3",
     "@angular/compiler-cli": "~13.3.4",
     "@angular/localize": "^13.3.4",
     "@types/jasmine": "~3.8.0",
